<resources>
    <string name="app_name">Agenda</string>
    <string name="hint_identifi">Identificacion:</string>
    <string name="hint_nombres">Nombres:</string>
    <string name="hint_apellidos">apellidos:</string>
    <string name="hint_correo">Correo:</string>
    <string name="hint_celular">Celular:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_Fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="btn_Fecha">Fecha</string>
    <string name="btn_guarda">Guardar registro</string>
    <string name="menu_nuevo">Nuevo registro</string>
</resources>