<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewIde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_identifi" />

        <EditText
            android:id="@+id/Identificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/Identificacion"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/viewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_nombres" />

        <EditText
            android:id="@+id/vNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/vNombres"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_apellidos" />

        <EditText
            android:id="@+id/Apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/Apellidos"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/txtCorreo"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_celular" />

        <EditText
            android:id="@+id/editCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/editCelular"
            android:inputType="phone" />

        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/Telefono"
            android:inputType="phone" />

        <TextView
            android:id="@+id/Fecha_naci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_Fecha_de_nacimiento" />

        <EditText
            android:id="@+id/Fecha_nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/Fecha_nac"
            android:focusable="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Fecha"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/btn_Fecha"
            android:textSize="10sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:src="@drawable/ic_delete" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>
<!--
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:ignore="BottomAppBar">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_edit" />

    </com.google.android.material.bottomappbar.BottomAppBar>-->